--- a/ProjetoUNIPÊ/assets/index.html
+++ b/ProjetoUNIPÊ/assets/index.html
@@ -24,8 +24,8 @@
             <div class="top-section-right-btn-entrar"><button class="btn entrar" type="submit"> Entrar</button></div>
         </div>
     </header>
-    <video autoplay loop muted poster="img/Vídeo sem título ‐ Feito com o Clipchamp.mp4">
-        <source src="img/Vídeo sem título ‐ Feito com o Clipchamp.mp4" type="video/mp4">
+    <video autoplay loop muted poster="img/Vídeo sem título ‐ Feito com o Clipchamp (6).mp4">
+        <source src="img/Vídeo sem título ‐ Feito com o Clipchamp (6).mp4" type="video/mp4">
     </video>
     <div id="intro">
         <section>
